# 521wolf

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  PLAYER_AGENT_INTERFACE.md  README.md  README.zh-CN.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  reasonix.toml  ui-backend-smoke.err  第一层.md  第二层.md
agent/: __init__.py
agent_versions/: README.md
app/: __init__.py  config.py  run.py
config/: llm.example.json
deploy/: README.md
docs/: AGENT_ARCHITECTURE.md  ENGINE_ARCHITECTURE.md  agent_layer_notes.md  agent_v2_followup_review.md  agent_v2_future_roadmap.md  agent_v2_gap_analysis.md  agent_v2_layering_plan.md  agent_v2_next_plan.md  agent_v2_remaining_ideas_full_design.md  agent_v2_review_findings.md  agent_v2_skill_markdown_refactor.md  agent_version_management_plan.md  architecture_v2.md  backend-decomposition-checklist.md  current_features.md  defense_sprint_plan.md  design.md  ideas.md  implementation_plan.md  langfuse-integration-execution-plan.md  player_agent_interface.md  project_structure_cleanup.md  rules_layer.md  task-queue-artifact-store-execution-plan.md
engine/: __init__.py  actions.py  config.py  engine.py  logging.py  models.py  players.py  public_log.py  role_state_types.py  roles.py
migrations/: env.py  script.py.mako
playeragent/: __init__.py  adapters.py  belief.py  decision.py  decision_log.py  llm.py  memory.py  parsing.py  policies.py  prompts.py  runtime.py
runs/: README.md
scripts/: bootstrap_registry.py  clean_old_data.py  seed_skills.py  verify_db_separation.py
storage/: __init__.py  artifacts.py  decision_order.py  decision_store.py  evaluation_store.py  evolution_store.py  experience_store.py  game_event_store.py  game_history_rules.py  game_read_model.py  game_read_payloads.py  game_read_projection.py  game_store.py  ids.py  importer.py  interfaces.py  (+11 more)
(+1277 files in other folders)
