[project]
name = "521wolf"
version = "0.1.0"
description = "Hardcoded 12-player Werewolf rules engine with an async agent action interface."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
werewolf-demo-llm = "werewolf.demo_llm:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["werewolf*", "playeragent*"]
