[project]
name = "521wolf"
version = "0.1.0"
description = "Hardcoded 12-player Werewolf rules engine with an async agent action interface."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "langfuse>=4.6.1",
    "openai>=2.38.0",
    "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "agent*"]
