[project]
name = "521wolf"
version = "0.1.0"
description = "Hardcoded 12-player Werewolf rules engine with an async agent action interface."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langfuse>=4.6.1",
    "langgraph>=1.2.4",
    "openai>=2.38.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "storage*", "app*"]

[dependency-groups]
dev = [
    "alembic>=1.13",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "sqlalchemy>=2.0",
]
